[gd_scene load_steps=14 format=3 uid="uid://dr24qnk8cmmm8"]

[ext_resource type="Script" uid="uid://drsg5l808vcwf" path="res://scripts/world/GuestSpawner.gd" id="1_k6517"]
[ext_resource type="PackedScene" uid="uid://gpb5riqb8j7y" path="res://scenes/characters/Guest.tscn" id="2_sgneo"]
[ext_resource type="Script" uid="uid://d6slxclw6l3v5" path="res://scripts/world/BuildController.gd" id="3_bld"]

[sub_resource type="NavigationMesh" id="NavigationMesh_sgneo"]
vertices = PackedVector3Array(-4.5, 0.07, -4.5, -4.5, 0.07, 4.5, 4.5, 0.07, 4.5, 4.5, 0.07, -4.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
geometry_parsed_geometry_type = 0
cell_height = 0.01
agent_height = 1.0
agent_radius = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_mk6tx"]
size = Vector3(10, 0.1, 10)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mk6tx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nfxbq"]
size = Vector3(10, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sgneo"]
albedo_color = Color(0, 0.51634353, 0.09081482, 1)
roughness = 0.8

[sub_resource type="PlaneMesh" id="PlaneMesh_mk6tx"]
material = SubResource("StandardMaterial3D_sgneo")
size = Vector2(300, 300)
center_offset = Vector3(0, -0.1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mk6tx"]
albedo_color = Color(0.4087444, 0.26713887, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nfxbq"]
material = SubResource("StandardMaterial3D_mk6tx")
size = Vector3(10, 5, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0big3"]
albedo_color = Color(0.084575094, 0.027255105, 3.308989e-08, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jblpu"]
material = SubResource("StandardMaterial3D_0big3")
size = Vector3(11, 1, 9)

[node name="TavernWorld" type="Node3D"]

[node name="TavernNav" type="NavigationRegion3D" parent="."]
visible = false
navigation_mesh = SubResource("NavigationMesh_sgneo")

[node name="TestCube" type="MeshInstance3D" parent="TavernNav"]
mesh = SubResource("BoxMesh_mk6tx")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="TavernNav"]
physics_material_override = SubResource("PhysicsMaterial_mk6tx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TavernNav/StaticBody3D"]
shape = SubResource("BoxShape3D_nfxbq")

[node name="TargetPoint" type="Node3D" parent="TavernNav"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.1557748)

[node name="SpawnPoint" type="Marker3D" parent="TavernNav"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7671986, 0, 3.546849)

[node name="Seats" type="Node3D" parent="TavernNav"]

[node name="Chair1" type="Marker3D" parent="TavernNav/Seats" groups=["seats"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.3061833)

[node name="Chair2" type="Marker3D" parent="TavernNav/Seats" groups=["seats"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5698752)

[node name="Chair3" type="Marker3D" parent="TavernNav/Seats" groups=["seats"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.87205553)

[node name="TavernActors" type="Node3D" parent="."]

[node name="TavernInteractables" type="Node3D" parent="."]

[node name="TavernCameraRig" type="Node3D" parent="."]

[node name="RTSCamera" type="Camera3D" parent="TavernCameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.70710677, 0.70710677, 0, -0.70710677, 0.70710677, 0, 15, 15)
current = true

[node name="TavernGateToTown" type="Area3D" parent="."]

[node name="GuestSpawner" type="Node3D" parent="."]
script = ExtResource("1_k6517")
guest_scene = ExtResource("2_sgneo")
spawn_point_path = NodePath("../TavernNav/SpawnPoint")
target_point_path = NodePath("../TavernNav/TargetPoint")

[node name="PlacedObjects" type="Node3D" parent="."]

[node name="BuildController" type="Node3D" parent="."]
script = ExtResource("3_bld")
kamera_path = NodePath("../TavernCameraRig/RTSCamera")
nav_regio_path = NodePath("../TavernNav")
lerakott_gyoker_path = NodePath("../PlacedObjects")
build_hint_path = NodePath("../../../UIRoot/UiRoot/BuildHint")
epitkezes_engedelyezett = false

[node name="SpawnPoint1" type="Node3D" parent="."]

[node name="GroundVisual" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_mk6tx")

[node name="TavernBuilding" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9626365, 0, 0)

[node name="BuildingBody" type="MeshInstance3D" parent="TavernBuilding"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
mesh = SubResource("BoxMesh_nfxbq")

[node name="Roof" type="MeshInstance3D" parent="TavernBuilding"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5, 0)
mesh = SubResource("BoxMesh_jblpu")
